--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "vue": "^2.6.14",
     "vue-router": "^3.5.4",
     "vuetify": "^2.6.9",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "@vue/cli-service": "~5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
